[gd_scene load_steps=5 format=2]

[ext_resource path="res://Stopwatch.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0509804, 0.231373, 0.301961, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.564706, 0.564706, 0.564706, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0627451, 0.380392, 0.466667, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.729412, 0.729412, 0.729412, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.141176, 0.490196, 0.584314, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.729412, 0.729412, 0.729412, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Stopwatch" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 400.0
margin_bottom = 400.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
margin_left = 166.636
margin_top = 12.5502
margin_right = 231.636
margin_bottom = 26.5502
text = "Stopwatch"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="."]
margin_left = 158.031
margin_top = 64.0
margin_right = 214.031
margin_bottom = 78.0
rect_scale = Vector2( 1.5, 1.5 )
text = "00:00:00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
margin_left = 128.0
margin_top = 120.0
margin_right = 187.0
margin_bottom = 140.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlagButton" type="Button" parent="."]
margin_left = 216.0
margin_top = 120.0
margin_right = 275.0
margin_bottom = 140.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 128.0
margin_top = 157.37
margin_right = 227.0
margin_bottom = 389.37
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="FlagButton" to="." method="_on_FlagButton_pressed"]
